fix: correct autocomplet z-indexing issue

--- a/src/sass/_vintage_york-styles.scss
+++ b/src/sass/_vintage_york-styles.scss
@@ -317,6 +317,7 @@ header .search-wrap input[type='submit'] {
   margin: 20px 0 -320px 0;
   padding: 0;
   list-style: none;
+  z-index: 100;
 }
 
 .ui-autocomplete li {
